$Id$

2013-07-21  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300/M500: Rename, add M500
	- SandForce Driven SSDs: Kingston KC300, MS200
	- Intel 320 Series SSDs: *A variant
	- Intel 330/335 Series SSDs: Rename, add 335 Series
	- Toshiba 2.5" HDD MK..46GSX
	- Toshiba 2.5" HDD MK..61GSY[N]: Rename, add *GSY variant
	- Toshiba 2.5" HDD MK..65GSX: *GSXF variant
	- Toshiba 3.5" HDD DT01ACA...
	- Seagate Laptop SSHD
	- Seagate Constellation ES.2: 2GB
	- USB: Seagate Expansion External (0x0bc2:0x3320)
	- USB: Seagate Backup Plus Desktop USB 3.0 (0x0bc2:0xa0a1)
	- USB: WD Elements (0x1058:0x10a2)

2013-07-20  Christian Franke  <franke@computer.org>

	dev_areca.cpp: Fix possible segfault on empty port.

2013-07-20  Christian Franke  <franke@computer.org>

	os_win32/daemon_win32.cpp: Do not install the service as interactive.
	This is no longer supported since Vista and produces misleading error
	messages in event log.

2013-07-20  Christian Franke  <franke@computer.org>

	ataprint.cpp: Do not print 'SCT Commands not supported' if SCT is
	not used (regression from r3825 r3826).
	smartctl.8.in: Mark '-g/-s wcreorder' as EXPERIMENTAL.

2013-07-18  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add Win-8.1 and 2012r2 to get_os_version_str(),
	remove 9x/ME and NT4.

2013-07-08  Alex Samorukov  <samm@os2.kiev.ua>

	Add Automake 1.12.2 to the list of supported versions

2013-07-07  Christian Franke  <franke@computer.org>

	configure.ac: Support SVN 1.8 working copy format.

2013-07-06  Alex Samorukov <samm@os2.kiev.ua>

	smartctl: Added ATA Write Cache Reordering control using "-g wcreorder"
	and "-s wcreorder[,on|off]" options (bug #221)
	smartctl: minor formatting fixes

2013-07-05  Alex Samorukov <samm@os2.kiev.ua>

	HPT RAID support: maximum disk number now is 128 (#281)

2013-06-28  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- Apacer SDM4 2Gb SSD

2013-06-17  Alex Samorukov <samm@os2.kiev.ua>
